--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "react-to-pdf": "^1.0.1",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
